# tetris

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/app/: app.cpp  app.hpp  assert.hpp  global.hpp  main.cpp
src/app/timer/: timer.cpp
src/blocks/: block.cpp  block.hpp  block_state.hpp
src/board/: board.cpp  board.hpp  board_state.hpp
src/game/: game.cpp  game.hpp  game_state.hpp
src/game/blocks/: block.cpp  block.hpp  block_state.hpp
src/game/board/: board.cpp  board.hpp  board_state.hpp
src/game/player/: player.cpp  player.hpp  player_state.hpp
src/game/tetromino/: tetromino.cpp  tetromino.hpp  tetromino_state.hpp
src/opengl/: opengl_manager.cpp  opengl_manager.hpp
src/opengl/input/: input.cpp  input.hpp
src/opengl/renderer/: renderer.cpp  renderer.hpp
src/opengl/renderer/shaders/: shader.frag.glsl  shader.vert.glsl  shader_manager.cpp  shader_manager.hpp
src/player/: player.cpp  player.hpp  player_state.hpp
src/renderer/: renderer.cpp  renderer.hpp
tests/: app_test.cpp
